--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-unused-imports": "^1.1.2",
+    "husky": "^7.0.0",
     "lint-staged": "^11.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
+    "prettier-plugin-tailwind": "^2.2.12",
     "tailwindcss": "^2.2.4",
-    "typescript": "4.3.5",
-    "husky": "^7.0.0"
+    "typescript": "4.3.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
