add new keywords in package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "tailwindcss",
     "next",
     "Next.js",
-    "layout"
+    "layout",
+    "nuxt",
+    "react dashboard",
+    "vue dashboard"
   ],
   "scripts": {
     "dev": "next dev",
