--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.54",
+    "cogo-toast": "^4.2.3",
     "next": "11.0.1",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
