Fix scroll beehavor on Header classNames and update Next to the latest version
- update global style
- change eslint file extenstion to explicit json
- update header component and useScrollHeader hook
- add sharp for better Nimages optimisation in prod

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,9 @@
 {
+  "root": true,
   "extends": [
     "plugin:prettier/recommended",
     "plugin:cypress/recommended",
-    "next",
-    "next/core-web-vitals"
+    "next"
   ],
   "plugins": ["unused-imports", "cypress"],
   "rules": {
