--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "next-sitemap": "^1.6.157",
     "next-themes": "^0.0.15",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sharp": "^0.29.1"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
