--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint && eslint '*/**/*.{ts,tsx}' --fix",
+    "format": "prettier '*/**/*.{ts,tsx}' --write",
     "prepare": "husky install",
     "postbuild": "next-sitemap",
     "cypress": "cypress open",
@@ -46,28 +47,27 @@
     "sharp": "^0.29.1"
   },
   "devDependencies": {
-    "@types/react": "17.0.14",
-    "@typescript-eslint/parser": "^4.28.2",
-    "autoprefixer": "^10.3.4",
-    "cypress": "^8.3.1",
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1",
+    "@types/react": "^17.0.38",
+    "@typescript-eslint/parser": "^5.8.1",
+    "autoprefixer": "^10.4.1",
+    "cypress": "^9.2.0",
+    "eslint": "^8.5.0",
+    "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-cypress": "^2.11.3",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-unused-imports": "^1.1.2",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
-    "postcss": "^8.3.6",
-    "prettier": "^2.3.2",
-    "prettier-plugin-tailwind": "^2.2.12",
-    "tailwindcss": "^2.2.10",
-    "typescript": "^4.4.2"
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.4",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.8",
+    "typescript": "^4.5.4"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint '*/**/*.{ts,tsx}' --fix",
-      "prettier '*/**/*.{ts,tsx}' --write"
+      "yarn lint",
+      "yarn format"
     ]
   }
 }
